wrpcon styling done

--- a/desgine.css
+++ b/desgine.css
@@ -18,3 +18,20 @@ body{
      font-weight: 800;
     
 }
+.wrapcont{
+ box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+border: 1px solid rgba(255, 255, 255, 0.3);
+    margin: 0 auto;
+    width: 500px;
+     height: 250px;
+    position: relative;
+    display: grid;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    padding: 30px 20px;
+    border-radius: 12px;
+   
+    
+    
+}
