--- a/desgine.css
+++ b/desgine.css
@@ -35,3 +35,11 @@ border: 1px solid rgba(255, 255, 255, 0.3);
     
     
 }
+button{
+  background-color: #4CAF50;
+color: white;
+height: 50px;
+width: 150px;
+font-size: 18px;
+font-weight: 500;
+}
