--- a/desgine.css
+++ b/desgine.css
@@ -2,7 +2,7 @@
 body{
     margin: 0;
     padding: 0;
-    background: linear-gradient(135deg, #74ebd5, #ACB6E5);
+    background: #002B5B;
     font-family: 'Poppins', sans-serif;
 }
 .heading{
@@ -14,12 +14,13 @@ body{
     padding: 20px;
 }
 .heading span{
-     color:white;
-     font-size: 50px;
+     color:#007BFF;
+     font-size: 80px;
      font-weight: 800;
     
 }
 .wrapcont{
+  background-color:#cce7ff;
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
 border: 1px solid rgba(255, 255, 255, 0.3);
     margin: 0 auto;
@@ -56,6 +57,17 @@ button:hover{
     background-color: blue;
     
 }
+input{
+   border: 1px solid #ccc;
+    padding: 8px 10px;
+    border-radius: 6px;
+    outline: none;
+    font-size: 16px;
+}
+input:focus{
+      border-color: #007BFF;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
+}
 .istinput p label {
     font-size: 22px;
 }
@@ -65,6 +77,7 @@ button:hover{
 #Weight-guide{
     margin-top: 30px;
     text-align: center;
+       color: #007BFF;
 }
 #Weight-guide span{
     font-size: 28px;
