--- a/desgine.css
+++ b/desgine.css
@@ -14,7 +14,7 @@ body{
     padding: 20px;
 }
 .heading {
-     color:whitesmoke;
+     color:#ff4f81;
      font-size: 50px;
      font-weight: 800;
 }
@@ -80,7 +80,7 @@ input:focus{
 
 .weight-guide h2 {
     font-size: 24px;
-    color: #222;
+    color: white;
     margin-bottom: 10px;
 }
 
@@ -111,7 +111,7 @@ input:focus{
 .weight-guide tbody tr:nth-child(4) { background-color: #f8d7da; }
 
 @media (max-width: 768px) {
-  .heading span {
+  .heading  {
     font-size: 32px;
   }
 
@@ -122,12 +122,14 @@ input:focus{
   }
 
   button {
-    width: 100%;
+    height: 50px;
+    width: 140px;
     font-size: 16px;
   }
 
   .istinput label,
   .ndiput label {
+    row-gap: 5px;
     font-size: 18px;
   }
 
