--- a/desgine.css
+++ b/desgine.css
@@ -149,6 +149,9 @@ input:focus{
   font-weight: bold;
   padding: 10px;
   border-radius: 6px;
+    opacity: 0;
+  transition: opacity 0.8s ease-in-out;
+
 }
 
 
