--- a/desgine.css
+++ b/desgine.css
@@ -32,10 +32,9 @@ border: 1px solid rgba(255, 255, 255, 0.3);
     align-items: center;
     padding: 30px 20px;
     border-radius: 12px;
-   
-    
-    
+     
 }
+/* button desgine */
 button{
   background-color: #4CAF50;
 color: white;
@@ -50,6 +49,7 @@ border-radius: 8px;
 transition: background-color 0.3s ease, transform 0.2s ease;
 
 }
+/* hover function */
 button:hover{
     cursor: pointer;
     color:black;
